<PreferenceScreen android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"><!--city--><PreferenceCategory android:layout_width="match_parent" android:layout_height="wrap_content" android:title="@string/city_cat_title" android:key="@string/city_cat_key"><EditTextPreference android:layout_width="match_parent" android:layout_height="wrap_content" android:title="@string/city_pref_title" android:key="@string/city_pref_key" /></PreferenceCategory><!--units--><PreferenceCategory android:layout_width="match_parent" android:layout_height="wrap_content" android:title="@string/unit_cat_title" android:key="@string/unit_cat_key"><ListPreference android:layout_width="match_parent" android:layout_height="wrap_content" android:title="@string/unit_pref_title" android:key="@string/unit_pref_key" android:entries="@array/unit_array" android:entryValues="@array/unit_array_values" android:defaultValue="metric" /></PreferenceCategory><!--Multilanguage--><PreferenceCategory android:layout_width="match_parent" android:layout_height="wrap_content" android:title="@string/language_cat_title" android:key="@string/language_cat_key"><ListPreference android:layout_width="match_parent" android:layout_height="wrap_content" android:title="@string/language_pref_title" android:key="@string/language_pref_key" android:entries="@array/lang_array" android:entryValues="@array/lang_array_values" android:defaultValue="en" /></PreferenceCategory><!--Location--><PreferenceCategory android:layout_width="match_parent" android:layout_height="wrap_content" android:title="@string/loc_cat_title" android:key="@string/loc_cat_key"><CheckBoxPreference android:layout_width="match_parent" android:layout_height="wrap_content" android:title="@string/loc_pref_title" android:key="@string/loc_pref_key" android:defaultValue="true" /></PreferenceCategory></PreferenceScreen>